支持NvEncC，解码模式可调

--- a/Easyx264CoderGUI/Resource1.resx
+++ b/Easyx264CoderGUI/Resource1.resx
@@ -199,6 +199,6 @@ Down10($depth$,stack=false, dither=-1, tvrange=$tvrange$)</value>
     <value>--demuxer lavf  --no-mbtree</value>
   </data>
   <data name="x264Line" xml:space="preserve">
-    <value>--acodec $acodec$ --output-csp $csp$ $profile$   $crf$  --preset $preset$  $tune$  $resize$    $userargs$   -o  "$outputfile$" "$input$"</value>
+    <value>--output-csp $csp$ $profile$   $crf$  --preset $preset$  $tune$  $resize$    $userargs$   -o  $outputfile$ $input$</value>
   </data>
 </root>
